terraform/v3/daany_k8s_test/k8s_yaml/fe/frontend-deployment.yaml
# fe_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: daengmap/daeng-map-frontend:latest
          ports:
            - containerPort: 3000
